# blog

./: .gitignore  .prettierrc  README.md  astro.config.mjs  build.sh  package-lock.json  package.json  tsconfig.json
.github/workflows/: deploy.yml
certs/: blog.ext  gen_https_cert.sh
public/scripts/bloom/: camera.ts  intro.ts  native.ts  ray.ts  scene.ts  wgsl.ts
src/: consts.ts  content.config.ts
src/components/: Aside.astro  BaseHead.astro  Caption.astro  Footer.astro  FormattedDate.astro  Header.astro  HeaderLink.astro  IntegratedCanvas.astro  Thumbnail.astro  ToneSelector.astro
src/content/adler/: intro.en.md  intro.es.md
src/content/bloom/: bloom.en.mdx  bloom.es.md  bloom.es.mdx  intro.md  sail.en.mdx  space-game.en.md  update.en.md
src/content/capstan/: intro.en.md  intro.es.md
src/content/general/: markdown-style-guide.es.md  music-theory.en.md  music-theory.en.mdx  using-mdx.es.mdx
src/layouts/: BlogPost.astro
src/pages/: [lang].astro  index.astro
src/pages/adler/: [...slug].astro  [lang].astro  index.astro
src/pages/adler/en/: [...slug].astro
src/pages/adler/es/: [...slug].astro
src/pages/bloom/: [...slug].astro  [lang].astro  index.astro
src/pages/bloom/en/: [...slug].astro
src/pages/capstan/: [...slug].astro  [lang].astro  index.astro
src/pages/general/: [...slug].astro
src/scripts/: sail.ts  tsconfig.json
src/scripts/bloom/ray/: Cargo.toml
src/scripts/bloom/ray/src/: camera.rs  fragment.wgsl  helpers.rs  lib.rs  main.rs  material.rs  select.rs  vertex.wgsl
src/styles/: global.css  overview.css
(+13 files in other folders)
